// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Molecules/ImageWithCategory From Src 1`] = `
<div
  className="css-12tez0x-styles-styles"
>
  <a
    className=" css-12jtorb-styles"
    href="/blog/some_blog_article"
    hrefLang="en-us"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <span
      className=" PictureAtom css-10on38g-styles-styles"
    >
      <picture>
        <source
          media="(max-width:500px)"
          srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_314,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.webp"
          type="image/webp"
        />
        <source
          media="(min-width:501px)"
          srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1408,h_884,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.webp"
          type="image/webp"
        />
        <source
          media="(min-width:501px)"
          srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1408,h_884,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.png"
          type="image/png"
        />
        <img
          alt="The Image Title"
          height={442}
          loading=""
          src="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_314,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624059624/wordpress-uploads/Screen-Shot-2021-06-18-at-4.34.36-PM/Screen-Shot-2021-06-18-at-4.34.36-PM.png"
          width={704}
        />
      </picture>
    </span>
  </a>
  <div
    className="categoryTags isSmall"
  >
    <a
      className=" css-12jtorb-styles"
      href="/blog/category/dogood"
      hrefLang="en-us"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Do Good
    </a>
    <a
      className=" css-12jtorb-styles"
      href="/blog/category/ethicalbanking"
      hrefLang="en-us"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Ethical Banking
    </a>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Molecules/ImageWithCategory From Wordpress Post And Media 1`] = `
<div
  className="css-12tez0x-styles-styles"
>
  <a
    className=" css-12jtorb-styles"
    href="/blog/some_blog_article"
    hrefLang="en-us"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <span
      className=" PictureAtom css-10on38g-styles-styles"
    >
      <picture>
        <source
          media="(max-width:500px)"
          srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_314,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.webp"
          type="image/webp"
        />
        <source
          media="(min-width:501px)"
          srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1408,h_884,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.webp"
          type="image/webp"
        />
        <source
          media="(min-width:501px)"
          srcSet="https://res.cloudinary.com/spiral/images/g_auto,w_1408,h_884,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.jpeg"
          type="image/jpeg"
        />
        <img
          alt="The Image Title"
          height={442}
          loading=""
          src="https://res.cloudinary.com/spiral/images/g_auto,w_500,h_314,c_fill/g_auto,w_1408,h_884,c_fill/f_auto,q_auto/v1624303199/wordpress-uploads/Highlights_MeetStory_1/Highlights_MeetStory_1.jpeg"
          width={704}
        />
      </picture>
    </span>
  </a>
  <div
    className="categoryTags"
  >
    <a
      className=" css-12jtorb-styles"
      href="/blog/category/dogood"
      hrefLang="en-us"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Do Good
    </a>
  </div>
</div>
`;
